--- a/test/action.yaml
+++ b/test/action.yaml
@@ -49,7 +49,7 @@ runs:
         working_directory: ${{ steps.target-config.outputs.working_directory }}
         github_comment: 'true'
 
-    - uses: suzuki-shunsuke/github-action-terraform-fmt@08fddcbf90a48b11e54962c287efa4449bb8da8c # v0.1.1
+    - uses: codimite/github-action-terraform-fmt@main
       if: steps.target-config.outputs.destroy != 'true'
       with:
         working_directory: ${{ steps.target-config.outputs.working_directory }}
